--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Document</title>
     <script src="js/game.js"></script>
 </head>
-<body>
+<body onload="init()">
 
     <h1>El pollo loco</h1>
 
 
-    <canvas width="720" height="480">
+    <canvas id="canvas" width="720" height="480">
 
     </canvas>
     
