--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
     <script src="models/movable-object.class.js"></script>
+    <script src="models/character.class.js"></script>
+    <script src="models/chicken.class.js"></script>
+    <script src="models/world.class.js"></script>
     <script src="js/game.js"></script>
 </head>
 <body onload="init()">
