--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="models/level.class.js"></script>
     <script src="models/endboss.class.js"></script>
     <script src="models/coin.class.js"></script>
+    <script src="models/throwable-object.class.js"></script>
     <script src="models/bottle.class.js"></script>
     <script src="levels/level1.js"></script>
     <script src="js/game.js"></script>
