add key declaration

--- a/index.html
+++ b/index.html
@@ -31,6 +31,21 @@
     <canvas id="canvas" width="720" height="480">
 
     </canvas>
+
+    <div style="width: 720px; height: 120px; display: flex; justify-content: center; align-items: center;">
+        <div style="display: ruby;">
+            <img src="img/9_intro_outro_screens/start/linker-pfeil.svg" style="height: 60px;">
+            <p>nach links gehen</p>
+        </div>
+        <div style="display: ruby;">
+            <img src="img/9_intro_outro_screens/start/rechter-pfeil.svg" style="height: 60px;">
+            <p>nach rechts gehen</p>
+        </div>
+        <div style="display: ruby;">
+            <img src="img/9_intro_outro_screens/start/leertaste.svg" style="height: 60px;">
+            <p>Leertaste um zu springen</p>
+        </div>
+    </div>
     
 </body>
 </html>
