add game over screen

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     <canvas id="canvas" width="720" height="480">
 
     </canvas>
+    <div id="gameOverScreen">
+        <img src="img/9_intro_outro_screens/game_over/game over!.png">
+    </div>
 
     <div style="width: 720px; height: 120px; display: flex; justify-content: center; align-items: center;">
         <div style="display: ruby;">
