add game instruction

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body onload="init()">
 
     <h1>El pollo loco</h1>
-
+    <h2>Erreiche das große Huhn!</h2>
 
     <canvas id="canvas" width="720" height="480">
 
